code work,locally testing

--- a/AuthorBoot/src/main/resources/application.properties
+++ b/AuthorBoot/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/AuthorDB
+spring.datasource.username=postgres
+spring.datasource.password=tiger
+spring.datasource.driver-class-name=org.postgresql.Driver
 
+server.port=8090
+
+spring.application.name=AUTHOR-SERVICE
