--- a/AuthorBoot/src/main/resources/application.properties
+++ b/AuthorBoot/src/main/resources/application.properties
@@ -1,8 +1,11 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/AuthorDB
-spring.datasource.username=postgres
-spring.datasource.password=tiger
-spring.datasource.driver-class-name=org.postgresql.Driver
 
 server.port=8090
 
 spring.application.name=AUTHOR-SERVICE
+spring.h2.console.enabled=true
+
+spring.datasource.url=jdbc:h2:mem:AuthorDB
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
